# spider

./: .gitignore  CMakeLists.txt  card.cpp  card.h  deck.cpp  deck.h  example12.game  example13.game  example14.game  example15.game  example16.game  example19.game  example21.game  example25.game  example26.game  example27.game  example29.game  example35.game  example36.game  example38.game  example39.game  example4.game  example44.game  example46.game  example48.game  example5.best  example7.game  example9.game  main.cpp  move.h  pile.cpp  pile.h  seahash.cpp  seahash.h
examples/: example.game  example10.game  example11.game  example12.game  example15.game  (+58 more)
spider_rust/: Cargo.toml  samples.csv  samples.flow
spider_rust/results/: example.game.500.yaml  example.game.5000.yaml  example.game.50000.yaml  example10.game.500.yaml  example10.game.5000.yaml  example10.game.50000.yaml  example11.game.500.yaml  example11.game.5000.yaml  example11.game.50000.yaml  example12.game.500.yaml  example12.game.5000.yaml  example12.game.50000.yaml  example13.game.500.yaml  example13.game.5000.yaml  example13.game.50000.yaml  example14.game.500.yaml  example14.game.5000.yaml  example14.game.50000.yaml  example15.game.500.yaml  example15.game.5000.yaml  example15.game.50000.yaml  example18.game.500.yaml  example18.game.5000.yaml  example18.game.50000.yaml  example19.game.500.yaml  example19.game.5000.yaml  example19.game.50000.yaml  example2.game.500.yaml  example2.game.5000.yaml  example2.game.50000.yaml  example20.game.500.yaml  example20.game.5000.yaml  example20.game.50000.yaml  example21.game.500.yaml  example21.game.5000.yaml  example21.game.50000.yaml  example22.game.500.yaml  example22.game.5000.yaml  example22.game.50000.yaml  example23.game.500.yaml  (+113 more)
spider_rust/src/: card.rs  deck.rs  intset.rs  main.rs  moves.rs  pile.rs
(+4 files in other folders)
