[package]
name = "spider_rust"
version = "0.1.0"
authors = ["Stephan Kulow <stephan@kulow.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fasthash = "0.4.0"
once_cell = "1.5.2"
parking_lot = "0.11.1"
threadpool = "1.8.1"
