[package]
name = "spider_rust"
version = "0.1.0"
authors = ["Stephan Kulow <stephan@kulow.org>"]
edition = "2018"
 #![feature(wrapping_int_impl)] 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5.2"
clap = "2.33.3"
seahash = "4.0.1"
neuroflow = "0.1.3"
csv = "1.1.5"